# blizztools

./: README.md  pyproject.toml
blizztools/: blte.py  cdn.py  encoding.py  main.py  models.py  parsers.py  products.py
tests/: test_main.py  test_parsers.py
